--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <img src="./img/london_eye_1.jpg" alt="">
         <img src="./img/london_eye_2.jpg" alt="">
     </header>
-    <main></main>
+    <main>
+        <section>
+            
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
