--- a/index.html
+++ b/index.html
@@ -13,10 +13,43 @@
         <img src="./img/london_eye_0.jpg" alt="">
         <img src="./img/london_eye_1.jpg" alt="">
         <img src="./img/london_eye_2.jpg" alt="">
+        <hr>
     </header>
     <main>
         <section>
-            
+            <h3>
+                Le mie spese
+            </h3>
+            <table>
+                <thead>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360€</td>
+                </tfoot>
+            </table>
+            <hr>
         </section>
     </main>
     <footer></footer>
