--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </header>
     <main>
         <section>
-            <h3>
-                Le mie spese
-            </h3>
+            <h3>Le mie spese</h3>
             <table>
                 <thead>
                     <th>Numero</th>
@@ -67,6 +65,48 @@
                     Mangiare il tipico Fish and Chips inglese &cross;
                 </li>
             </ul>
+            <hr>
+        </section>
+        <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li>
+                            <strong>999</strong> - Emergenza
+                        </li>
+                        <li>
+                            <strong>101</strong> - Numero Polizia
+                        </li>
+                        <li>
+                            <strong>111</strong> - Numero Assistenza Medica
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li>
+                            <strong>Nome Hotel:</strong> Buckingham Palace
+                        </li>
+                        <li>
+                            <strong>Indirizzo Hotel:</strong> Westminister, London SW1A 1AA, Regno Unito
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li>
+                            <strong>Volo di andata:</strong> Y1234Q ore 9.30 da Milano Malpensa
+                        </li>
+                        <li>
+                            <strong>Volo di ritorno:</strong> Q4321Y ore 18.30 da London Heathrow
+                        </li>
+                    </ul>
+                </li>
+            </ol>
             <hr>
         </section>
     </main>
