add section foto

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
             </ol>
             <hr>
         </section>
+        <section>
+            <h3>Le foto</h3>
+            <img src="./img/bigbang.jpg" alt="">
+            <img src="./img/london_bridge.jpeg" alt="">
+        </section>
     </main>
     <footer></footer>
 </body>
