add footer e commenti

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Titolo -->
     <header>
-        <h1>
-            Il mio viaggio a londra
-        </h1>
+        <h1>Il mio viaggio a londra</h1>
         <img src="./img/london_eye_0.jpg" alt="">
         <img src="./img/london_eye_1.jpg" alt="">
         <img src="./img/london_eye_2.jpg" alt="">
         <hr>
     </header>
+
+    <!-- Corpo centrale -->
     <main>
+        <!-- Tabella spese -->
         <section>
             <h3>Le mie spese</h3>
             <table>
@@ -49,6 +51,9 @@
             </table>
             <hr>
         </section>
+        <!-- /Tabella spese -->
+
+        <!-- To do list -->
         <section>
             <h3>Cose da fare</h3>
             <ul>
@@ -67,6 +72,9 @@
             </ul>
             <hr>
         </section>
+        <!-- /To do list -->
+
+        <!-- Info Utili -->
         <section>
             <h3>Info utili:</h3>
             <ol>
@@ -109,12 +117,21 @@
             </ol>
             <hr>
         </section>
+        <!-- /Info Utili -->
+
+        <!-- Sezione foto -->
         <section>
             <h3>Le foto</h3>
-            <img src="./img/bigbang.jpg" alt="">
-            <img src="./img/london_bridge.jpeg" alt="">
+            <img src="./img/bigbang.jpg" width="400" alt="">
+            <img src="./img/london_bridge.jpeg" width="600" alt="">
+            <hr>
         </section>
+         <!-- /Sezione foto -->
     </main>
-    <footer></footer>
+
+    <!-- Copyright -->
+    <footer>
+        Copiright by <strong>Paolo Marzocchi&copy;</strong>
+    </footer>
 </body>
 </html>
